"""Agent Loop v2 阶段间数据结构。"""

from __future__ import annotations

from dataclasses import dataclass, field
from typing import TYPE_CHECKING, Any, Literal

TaskOutcome = Literal["success", "failed", "ask_human"]

if TYPE_CHECKING:
    from app.domain.models.task import Task
    from app.llm.types import ImageBlock, LLMTool


@dataclass
class ContextResource:
    """Agent 可用资源（工具或技能），统一承载检索结果。"""
    name: str
    description: str
    kind: Literal["tool", "skill", "agent"]
    llm_tool: "LLMTool | None" = None   # kind="tool" 时有效，传给 LLM function calling


@dataclass
class ReasoningContext:
    """Reasoner 阶段输出，作为 Actor 的输入。"""
    # Memory 层
    goal: str
    recent_messages: list[dict]
    blackboard_snippets: list[str | list]
    # Agent 身份（由 Reasoner 从 Agent 对象提取）
    soul: str = ""                       # agent.soul_md or agent.system_prompt
    role: str = ""                       # agent.role_md
    skill_instructions: str = ""         # 当前 task 的 skill instructions（plan/act 均可有）
    # 检索结果：工具（kind="tool"）+ 可用技能（kind="skill"）
    actor_resources: list[ContextResource] = field(default_factory=list)
    # Observer 阶段可用工具（由 Reasoner 按 agent.observe_tool_list 过滤后填充）
    observer_resources: list[ContextResource] = field(default_factory=list)
    # 当前待执行 task（plan or atomic，统一字段）
    current_task: "Task | None" = None
    # Token 估算（给 guard 用）
    token_estimate: int = 0
    # 项目背景（从 working_dir/BACKGROUND.md 读入）
    project_background: str = ""



@dataclass
class ToolCallRecord:
    """Actor 内单次工具调用记录（用于 ActorResult 和审计）。"""
    tool_name: str
    arguments: dict[str, Any]
    result: str
    is_error: bool = False
    tool_call_id: str = ""


@dataclass
class ConversationTurn:
    """Actor 内单轮 LLM 交互记录，完整保留给 Observer 评估。"""
    round: int
    messages_sent: list[Any]           # list[LLMMessage]，避免循环导入用 Any
    llm_text: str                       # 本轮 LLM 文本回复
    tool_calls: list[ToolCallRecord] = field(default_factory=list)
    images: list[Any] = field(default_factory=list)  # list[ImageBlock]，本轮 LLM 输出的图片


@dataclass
class ActorResult:
    """Actor 对单个 task 的执行结果，作为 Observer 的输入。"""
    task_id: str
    success: bool                                                   # 执行层成功（未抛异常）
    output: str                                                     # 最后一轮 LLM 文本
    tool_calls_made: list[ToolCallRecord] = field(default_factory=list)
    conversation_turns: list[ConversationTurn] = field(default_factory=list)
    actor_mode: Literal["text", "tool_use", "skill", "plan"] = "text"
    skill_used: str | None = None
    error: str | None = None
    context_tokens: int = 0            # 本次执行中最大单轮 prompt_tokens
    exit_reason: str = "normal"        # "normal" | "context_limit" | "max_rounds"


@dataclass
class ObserverVerdict:
    """Observer 阶段输出。task 状态由 ControlToolProvider handler 写入，此处只携带 memory 摘要。"""
    summary: str                       # 写入 Memory（role=assistant）
    context_tokens: int = 0           # 本次 observe 中最大单轮 prompt_tokens
